--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <img src="" id="images"></img>
-    <div class="loader"></div>
+    <div id="imagenes"></div>
+    <div id="loader"></div>
   </body>
 </html>
