Add manifest v3 and delete moment.js

--- a/popup.html
+++ b/popup.html
@@ -1,12 +1,11 @@
 <html>
   <head>
     <title>GTmetrix Analyzer</title>
-    <script src="moment.min.js"></script>
     <script src="extension.js"></script>
     <link rel="stylesheet" href="popup.css">
   </head>
   <body>
-    <div id="imagenes"></div>
+    <div id="images"></div>
     <div id="loader"></div>
   </body>
 </html>
